--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
-import "/Users/jhes/Desktop/MMD/2sem/astro/src/styles/style.css";
-import button from "/Users/jhes/Desktop/MMD/2sem/astro/src/components/Button.astro";
+import Button from "../components/Button.astro";
+
+import "../styles/style.css";
 ---
 
 <html lang="en">
@@ -18,7 +18,9 @@ import button from "/Users/jhes/Desktop/MMD/2sem/astro/src/components/Button.ast
     <h1>Astro</h1>
 
     <main>
-      <button variant="primary" size="medium">TEXT</button>
+      <Button variant="primary" size="small">TEXT</Button>
+      <Button variant="secondary" size="medium">TEXT</Button>
+      <Button variant="secondary" size="large">TEXT</Button>
     </main>
   </body>
 </html>
